helm-manifest.yaml
---
# Source: cigg-app/templates/backend-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: cigg-app-cigg-app-backend-service
spec:
  type: ClusterIP
  selector:
   app: cigg-app-cigg-app-backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
# Source: cigg-app/templates/db-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  clusterIP: None
  selector:
    app: cigg-app-cigg-app-statefulset
  ports:
    - port: 5432
      targetPort: 5432
---
# Source: cigg-app/templates/frontend-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: ClusterIP
  selector:
   app: cigg-app-cigg-app-frontend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
# Source: cigg-app/templates/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cigg-app-cigg-app-backend
  labels:
    app: cigg-app-cigg-app-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cigg-app-cigg-app-backend
  template:
    metadata:
      labels:
        app: cigg-app-cigg-app-backend
    spec:
      # Init container to wait for DB
      containers:
      - name: cigg-app-cigg-app-backend
        image: shireesh14/cig-backend:d96282f71ef813c223a894ee96ae792c537f0e88
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        startupProbe:
          httpGet:
            path: /health
            port: 3000
          failureThreshold: 30
          periodSeconds: 10
      
        livenessProbe:
          httpGet:
            path: /health
            port: 3000       
          initialDelaySeconds: 5
          periodSeconds: 4
        
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 4

        resources:
            limits:
              cpu: 500m
              memory: 256Mi
            requests:
              cpu: 250m
              memory: 128Mi
---
# Source: cigg-app/templates/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cigg-app-cigg-app-frontend
  labels:
    app: cigg-app-cigg-app-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cigg-app-cigg-app-frontend
  template:
    metadata:
      labels:
        app: cigg-app-cigg-app-frontend
    spec:
      containers:
      - name: cigg-app-cigg-app-frontend
        image: shireesh14/cig-frontend:5f9a3f91f31b3af151d91789ccc14b2db8d042da
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
      
        startupProbe:
          httpGet:
            path: /healthz
            port: 8080
          failureThreshold: 9
          initialDelaySeconds: 20
          periodSeconds: 10
      
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 4
        
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 4

        resources:
            limits:
              cpu: 500m
              memory: 256Mi
            requests:
              cpu: 250m
              memory: 128Mi
---
# Source: cigg-app/templates/db-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cigg-app-cigg-app-statefulset
spec:
  selector:
    matchLabels:
      app: cigg-app-cigg-app-statefulset
  serviceName: postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: cigg-app-cigg-app-statefulset
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: postgres
        image: postgres:15
        ports:
        - containerPort: 5432
        volumeMounts:
          - name: postgres-storage
            mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: postgres-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: standard
      resources:
        requests:
          storage: 1Gi
---
# Source: cigg-app/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cigg-app-cigg-app-ingress
spec:
  rules:
  - host: cigg-app.local
    http:
      paths:
      # BACKEND: match /api first
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: cigg-app-cigg-app-backend-service
            port:
              number: 3000
      # FRONTEND: catch-all
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-service
            port:
              number: 8080
